cmake_minimum_required(VERSION 3.9)
project(untitled)
SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/usr/local/boost_1_64_0")
SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "/usr/local/boost_1_64_0/stage/lib")
set(CMAKE_CXX_STANDARD 11)
set(Boost_USE_FILESYSTEM_LIBS ON)
set(SOURCE_FILES main.cpp)
find_package(OpenMP)

if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
find_package(Boost 1.64.0 COMPONENTS filesystem system)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(untitled ${SOURCE_FILES})
    target_link_libraries(untitled ${Boost_LIBRARIES})
endif()